# dostuff

./: .gitignore  Dockerfile  LICENSE  Pipfile  Procfile  README.md  docker-compose.yml  docker.env  fabfile.py  manage.py  pyproject.toml  requirements.txt  tasks.py
dostuff/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
main/: admin.py  consumers.py  models.py  routing.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_event_room_name.py  0003_remove_event_event_type.py  0004_remove_event_status.py
main/static/js/: reconnecting-websocket.min.js
main/templates/: show_events.html
